--- a/huu-ich/cau-chuyen/bat-dau-dau-tu.html
+++ b/huu-ich/cau-chuyen/bat-dau-dau-tu.html
@@ -349,6 +349,7 @@ data-ad-slot="3830899615">
   <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
   <br>* <a href="../tich-luy#luonghuu">Lương hưu ở các nước giàu</a>
   <br>* <a href="../tien-thuong-cuoi-nam">Quỹ hưu trí tự nguyện bổ sung cho bảo hiểm xã hội</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132815538449670144" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/636092159889729" rel="nofollow" target="_blank">Facebook</a></div>
 
 
