--- a/huu-ich/cau-chuyen/dung-the-tin-dung-khon-ngoan.html
+++ b/huu-ich/cau-chuyen/dung-the-tin-dung-khon-ngoan.html
@@ -389,6 +389,7 @@ data-ad-slot="3830899615">
   Các bài liên quan:
   <br>* <a href="tranh-mang-no">Tránh mang nợ, nhất là nợ thẻ tín dụng</a>
   <br>* <a href="https://www.facebook.com/notes/b%E1%BB%99i-l%C3%AA/ti%E1%BA%BFt-ki%E1%BB%87m-ti%E1%BB%81n-%E1%BB%9F-manulife-%C4%91%C6%B0%E1%BB%A3c-citibank-th%C6%B0%E1%BB%9Fng/967940759964941/">Thưởng đến 5% số tiền quẹt thẻ</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132815148236791808" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/581332995365646" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
