--- a/huu-ich/cau-chuyen/kakeibo.html
+++ b/huu-ich/cau-chuyen/kakeibo.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -324,6 +325,10 @@ data-ad-slot="3830899615">
   <hr>
   <p>Kakeibo là bước đầu để kiểm soát chi tiêu để có tiền tiết kiệm, bước thứ hai là <a href="../ke-hoach-tai-chinh/">lập kế hoạch tiết kiệm</a> để biết được nên tiết kiệm bao nhiêu là vừa đủ cho tương lai, không thắt chặt quá mức trong hiện tại hay tương lai.</p>
   <p>Dùng sổ và bút để ghi chép tác động đến tâm lý nhiều hơn, nhưng khi đã thành thói quen kiểm soát chi tiêu thì có thể dùng <a href="/kinh-nghiem/may-tinh/gnucash">phần mềm ghi chép</a> để quản lý tài sản dễ dàng hơn.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
+  </div>
 
 
 <!-- AMP In-article 1 -->
