--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -469,6 +469,7 @@ Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết đ
   <br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
   <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch tài chính để về hưu sớm</a>
   <br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132811935500496898" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/427393317426282" rel="nofollow" target="_blank">Facebook</a></div>
 
 
