--- a/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
+++ b/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -345,6 +346,7 @@ data-ad-slot="3830899615">
   Các bài liên quan:
   <br>* <a href="../dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
   <br>* <a href="../tien-thuong-cuoi-nam">Quỹ hưu trí tự nguyện bổ sung cho bảo hiểm xã hội</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132812623890673664" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/400359176796363" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
