--- a/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
+++ b/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
@@ -215,6 +215,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
   <br>* <a href="../de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
   <br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132813859637452801" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376848852480729" rel="nofollow" target="_blank">Facebook</a></div>
 
 
