--- a/kinh-nghiem/linh-tinh/ac-dc.html
+++ b/kinh-nghiem/linh-tinh/ac-dc.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -299,6 +300,10 @@ data-ad-slot="3830899615">
   <p>Trong khi đó, ngày càng nhiều máy dùng điện trong gia đình cần dùng điện một chiều: radio, TV, ampli, đầu đọc đĩa, máy tính, lò microwave, bếp điện từ, điện thoại di động, đèn LED… Ngày càng nhiều máy dùng điện một chiều trong gia đình nhưng điện truyền vào nhà vẫn là điện xoay chiều như cả trăm năm trước. Mỗi máy dùng điện phải tự đổi điện xoay chiều ra điện một chiều để dùng. Việc đổi điện AC - DC đó được làm bên trong máy hoặc dùng một bộ biến đổi bên ngoài, gọi là adapter. Một xu hướng của nhiều máy dùng điện một chiều gần đây là dùng điện thế 5V ngang với điện thế trong lỗ cắm USB. Theo xu hướng đó, các nhà sản xuất làm ra nhiều dạng adapter đổi điện xoay chiều ra điện một chiều 5V: adapter rời, adapter gắn chìm trên tường, adapter kèm theo ổ cắm điện nối dài… Để cấp điện cho các máy cần nhiều điện qua USB, người ta đang bàn đến việc nâng điện thế trong lỗ cắm USB lên cao hơn 5V, lên đến 25V. Trong khi chưa có tiêu chuẩn chung về  điện thế cao hơn cho USB, các nhà sản xuất điện thoại di động đã làm ra các adapter quick charge có thể điều chỉnh điện thế lên 9V và 12V để sạc điện thoại nhanh hơn.</p>
   <p>Mặt khác, trong nhiều máy dùng điện một chiều ngày nay lại có mạch điện tử tạo ra dòng điện xoay chiều ba pha biến tần để cấp cho những động cơ cần thay đổi tốc độ quay và công suất. Ví dụ: máy lạnh biến tần, quạt làm mát trong máy tính.</p>
   <p>Nói thêm về cái adapter đổi điện xoay chiều thành điện một chiều. Ngày xưa, để đổi điện như vậy người ta phải dùng một máy biến thế công suất nhỏ để biến điện xoay chiều từ 120V-240V xuống thành điện xoay chiều điện thế thấp ví dụ 12V, sau đó dùng hai hoặc bốn diode để đổi chiều điện thế từ hình sin thành hai nửa hình sin cùng dấu, lúc này dòng điện chỉ chạy theo một chiều nhưng không được đều đặn mà tăng giảm theo nửa hình sin 100-120 lần mỗi giây. Dòng điện tăng giảm như vậy sẽ tạo ra tiếng u u ở những máy có loa hoặc tạo ra dợn sóng trên màn hình TV. Để giảm những điều không mong muốn đó thì người ta phải san phẳng điện thế cho bớt thay đổi kiểu nửa hình sin để cho dòng điện bớt tăng giảm, việc đó gọi là lọc. Bây giờ các adapter dùng mạch điện tử để đổi điện xoay chiều 120V-240V sang điện xoay chiều điện thế thấp nhưng tần số cao vài kilohertz trở lên, sau đó mới dùng diode để đổi ra điện một chiều điện thế thấp, adapter loại này có nhiều ưu điểm hơn loại cũ: gọn nhẹ, ít dợn sóng.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 <!-- AMP In-article 1 -->
 <amp-ad
