--- a/kinh-nghiem/linh-tinh/bep.html
+++ b/kinh-nghiem/linh-tinh/bep.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -321,6 +322,10 @@ Nhiều người bán bếp điện từ vẫn tưởng lầm rằng nồi inox 
   Thuỷ tinh, sành sứ không hấp thụ sóng vi ba nên dùng làm đồ đựng thực phẩm nấu trong lò được. <u>Chú ý</u>: khi nấu món ít nước trong lò vi ba thì nhiệt độ thực phẩm sẽ tăng rất nhanh, có thể làm nứt-vỡ đồ thuỷ tinh thường.</p>
   <p>Hãy rút hẳn dây cắm điện sau mỗi lần dùng bếp điện từ, lò microwave, hoặc các loại máy điện khác vì lượng điện tiêu thụ ở trạng thái <a href="dien-standby">standby</a> của những thứ đó cộng lại sẽ khá lớn.</p>
   <p>Bạn có thể xem thêm bài về <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a>.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
+  </div>
   
 
 <!-- AMP In-article 1 -->
