--- a/kinh-nghiem/linh-tinh/dien-standby.html
+++ b/kinh-nghiem/linh-tinh/dien-standby.html
@@ -165,6 +165,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -294,6 +295,10 @@ data-ad-slot="3830899615">
   </div>
   <p>Có thể những người ở nhà lớn, chi tiêu mỗi tháng vài chục triệu đồng sẽ không quan tâm đến việc tiết kiệm vài trăm ngàn đồng. Và những công ty lớn không cần tiết kiệm vài triệu đồng tiền điện mỗi tháng. Nhưng tiết kiệm điện không chỉ là tiết kiệm tiền mà còn ngăn chặn sự huỷ hoại Trái Đất, không lẽ tầng lớp trên của xã hội giao hết việc cứu Trái Đất cho tầng lớp dưới làm?</p>
   <p>Sắp đến ngày Thứ Bảy cuối cùng của Tháng Ba là ngày có <b>Giờ Trái Đất</b>, người ta bảo nhau tắt bớt đèn và các thiết bị điện không thiết yếu một giờ để tiết kiệm điện, giảm bớt nguy hại cho Trái Đất. Tôi tin rằng lượng điện tiết kiệm được trong Giờ Trái Đất còn nhỏ hơn lượng điện các thiết bị dùng standby mỗi ngày. Vậy thì hãy cùng nhau làm một việc lớn hơn Giờ Trái Đất: không để các thiết bị điện tử standby một giây nào nữa.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 <!-- AMP In-article 1 -->
