--- a/kinh-nghiem/linh-tinh/magchan.html
+++ b/kinh-nghiem/linh-tinh/magchan.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -367,6 +368,10 @@ data-ad-slot="3830899615">
   <p>Tôi vẫn giặt với nước giặt và để gói Magchan trong thùng giặt vì không biết làm gì khác với nó.</p>
   <p>Trong một nhóm thảo luận trong Facebook cũng có vài người cho biết rằng một vài quần áo giặt bằng Magchan xong vẫn còn hôi. Cũng có người cho biết rằng họ vẫn phải dùng chất tẩy rửa cùng với Magchan.</p>
   <p>Tôi sẵn sàng cho người quen mượn dùng gói Magchan trong một tuần để biết rõ hơn về Magchan trước khi quyết định mua.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 <!-- AMP In-article 1 -->
 <amp-ad
