--- a/kinh-nghiem/linh-tinh/may-lanh.html
+++ b/kinh-nghiem/linh-tinh/may-lanh.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -499,6 +500,10 @@ data-ad-slot="3830899615">
   <p>Tôi cắt thùng TV bằng bìa ra, xếp thành cái ống bọc quanh khoảng trống giữa miệng quạt thổi hơi nóng ra và một nửa khoảng lá sách. Vậy là hơi nóng thổi từ giàn nóng ra bị ép đi <i>gần hết</i> theo cái ống mới tạo qua một nửa khoảng lá sách ra khỏi khoang, không khí nguội ngoài trời sẽ bị hút vào qua một nửa khoảng lá sách còn lại (xem hình) để bù cho lượng không khí đã đi ra. Kết quả: máy nén chạy liên tục cả giờ mà khoang đó vẫn nguội như không khí ngoài trời, nguội hơn so với trường hợp đối lưu không khí. Giàn nóng càng nguội thì hiệu suất bơm nhiệt càng cao, nhà mau mát hơn.
 </p>
   <p>Rất may là tôi chỉ cần đặt một giàn nóng máy lạnh trong khoang này nên có thể chia đôi khoảng lá sách, nếu có hai giàn nóng ở đó thì vô kế khả thi.</p>
+  </div>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
   </div>
 
 
