--- a/kinh-nghiem/linh-tinh/nhiet-do.html
+++ b/kinh-nghiem/linh-tinh/nhiet-do.html
@@ -134,6 +134,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -193,6 +194,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     data-videoid="DPI9rOkH4_o"
     layout="responsive"
     width="420" height="315"></amp-youtube>
+  </div>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
   </div>
 
 
