--- a/kinh-nghiem/linh-tinh/nong.html
+++ b/kinh-nghiem/linh-tinh/nong.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -423,6 +424,10 @@ data-ad-slot="3830899615">
     <li>bộ đổi điện không hoà được vào lưới điện chung, do đó luôn luôn phải có bộ accu trữ điện. Công suất phát của bộ pin quang điện và công suất tiêu thụ càng lớn thì bộ accu càng lớn theo. Accu có tuổi thọ rất ngắn so với bộ pin quang điện. Tiền mua accu chia cho tuổi thọ của nó (tính bằng tháng) còn lớn hơn tiền mua điện sử dụng hàng tháng làm cho các hệ thống điện mặt trời này không có tính kinh tế ở những nơi đã có lưới điện. Ngoài ra, hợp đồng mua bán điện với các công ty điện lực chưa có điều khoản để các khách hàng nhỏ bán điện lại cho công ty điện lực. Cho nên khi điện chảy lên lưới thì người chủ bộ điện mặt trời không nhận được tiền. Các công ty điện lực cần phải thay đổi hợp đồng để khuyến khích các nguồn phát điện nhỏ bổ sung cho lưới điện chung.</li>
   </ul>
   <p>Chính sách mới: Ngày 11/04/2017, Thủ tướng đã ra quyết định số <a href="https://vanban.chinhphu.vn/portal/page/portal/chinhphu/hethongvanban?class_id=1&mode=detail&document_id=189336" target='_blank'>11/2017/QĐ-TTg</a> buộc EVN mua lại điện mặt trời từ dân.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
+  </div>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
