--- a/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
+++ b/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -296,6 +297,10 @@ data-ad-slot="3830899615">
   Mặc dù 120 là bội số của 24 nhưng không phải tất cả TV 120Hz đều có chế độ 24p. Cũng giống như có nhiều cách xử lý tín hiệu 50Hz, có nhiều mức độ thực hiện 24p. Mức độ đơn giản nhất là vẽ 24 hình mỗi giây, mức độ cao hơn là lặp lại mỗi hình để vẽ 48 hoặc 96 hình mỗi giây để hình đỡ nhấp nháy, cao nhất là vẽ ra một hoặc ba hình trung gian giữa hai hình liên tiếp để ra 48 hoặc 96 hình khác nhau mỗi giây (Panasonic gọi là <b>24p Smooth Film</b>, Samsung gọi là <b>Cinema Smooth</b>).
 Nếu TV không có chế độ 24p thì nguồn phát (máy phát đĩa Blue-ray, HTPC, HD player, hay HDTV set-top box) sẽ phải lặp lại một số hình từ 24 hình mỗi giây để đưa cho TV 50 hay 60 hình mỗi giây, việc này gọi là pull-down, hình ảnh chuyển động trên TV sẽ không được tự nhiên. Đối với những người hay xem phim thì chế độ 24p có giá trị hơn chế độ 100/120Hz. Khi đã có một TV có chế độ 24p thì đừng bỏ phí nó khi xem phim, hãy chọn đúng chế độ 24p ở nguồn phát và đừng tắt chế độ 24p trên TV.</p>
   <p>Bài này đã được gửi vào diễn đàn <a href="https://www.hdvietnam.com/diendan/31-hd-cho-nguoi-moi-bat-dau/40977-cac-con-so-hz-quanh-nhung.html" target="_blank">hdvietnam.com</a> ngày 29-12-2009.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
