--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -236,6 +237,10 @@ Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin
 Nếu bạn gửi tin nhắn chat đến một nhóm người thì tin nhắn trả lời của từng người đều đến cả nhóm, rất thuận tiện cho trao đổi chung trong nhóm. 
 <h2>RCS thiếu tính năng voice chat</h2>
 Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính năng voice chat hoặc gửi voice mail. Messages của Google không có tính năng voice. Để voice chat bạn cần dùng Google Duo. Khi cài Google Duo vào cùng với Messages thì trong app Messages sẽ có các icon để voice và video chat.
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
