--- a/kinh-nghiem/may-tinh/bat-dau-gnucash.html
+++ b/kinh-nghiem/may-tinh/bat-dau-gnucash.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -710,7 +711,10 @@ data-ad-slot="3830899615">
 </tr>
 </tbody>
 </table>
-  <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133596398413393920" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376820392483575" rel="nofollow" target="_blank">Facebook</a></div>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133596398413393920" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376820392483575" rel="nofollow" target="_blank">Facebook</a></div>
 
 
 <!-- AMP In-article 1 -->
