--- a/kinh-nghiem/may-tinh/cloudstorage.html
+++ b/kinh-nghiem/may-tinh/cloudstorage.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -343,7 +344,10 @@ data-ad-slot="3830899615">
     <li>Tạo một folder để người khác upload file vào thay vì người đó phải đính kèm file vào email và gửi cho tôi.</li>
     <li>Cho người khác quyền sửa hoặc thêm nhận xét vào file Doc hoặc Sheet trong Google Drive của tôi.</li>
   </ul>
-
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 <!-- AMP In-article 1 -->
 <amp-ad
