--- a/kinh-nghiem/may-tinh/conferencecall.html
+++ b/kinh-nghiem/may-tinh/conferencecall.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -197,6 +198,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <p>Tui đoán rằng khi sắp xếp sao cho hầu hết các cuộc gọi tạo thành hội nghị là gọi nội mạng và chỉ có một cuộc gọi sang mạng khác thì số người tham gia hội nghị có thể nhiều hơn 50 người. Ví dụ 48 người trong mạng Mobifone tham gia hội nghị rồi một người từ trong hội nghị đó gọi một người trong mạng Vinaphone, một người khác trong hội nghị gọi một người trong mạng Viettel, và mỗi người trong mỗi mạng kia lại gọi tiếp 48 người nữa, tổng cộng lên đến 146 người.
 <br>Khả năng của mạng điện thoại thì cho phép như vậy nhưng không thể tưởng tượng nổi vài chục người họp với nhau mà chỉ nghe tiếng, không thấy nhau thì điều khiển cuộc họp thế nào!
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
