--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -390,6 +391,8 @@ data-ad-slot="3830899615">
 * <a href="https://blockgeeks.com/guides/what-is-cryptocurrency/" target='_blank'>What is cryptocurrency</a><br>
 * <a href="https://en.bitcoin.it/wiki/Help:FAQ" target='_blank'>Bitcoin Wiki</a>
 <div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://www.facebook.com/boi.hong.le/posts/1540582892700722?pnref=story" rel="nofollow" target="_blank">Facebook</a></div>
   <hr>
   <div class="footer">
