--- a/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang.html
+++ b/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang.html
@@ -151,6 +151,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -1023,7 +1024,10 @@ data-ad-slot="3830899615">
 <p>Thời hạn tính theo ngày nghĩa là dùng đến cuối ngày thứ 1 hay cuối ngày thứ 30. Thời hạn 24 giờ là được dùng đúng 24 giờ.
 <br>Các gói cước 24 giờ hay 1 ngày được tự động gia hạn cho đến khi gửi SMS yêu cầu huỷ.</p>
 
-<div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133593945877823489" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/385784064920541" rel="nofollow" target="_blank">Facebook</a></div>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133593945877823489" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/385784064920541" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
   <div class="footer">
