--- a/kinh-nghiem/may-tinh/ham-tai-chinh.html
+++ b/kinh-nghiem/may-tinh/ham-tai-chinh.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -330,6 +331,7 @@ Các bài liên quan:
 <br>* <a href="/huu-ich/cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
 <br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
 <br>* <a href="/huu-ich/dung-so-dau-tu">Đừng sợ đầu tư</a>
+<br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133599150967103493" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/587261241439488" rel="nofollow" target="_blank">Facebook</a></div>
 
 
