--- a/kinh-nghiem/may-tinh/in-phun.html
+++ b/kinh-nghiem/may-tinh/in-phun.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -223,6 +224,10 @@ Sau khi xoá Protection Counter về số không, còn phải mở máy in ra, t
 <p>Hệ thống mực liên tục gồm có những cartridge giả gắn trong máy và những ống dẫn mực từ những bình mực bên cạnh máy vào những cartridge giả. Những ống dẫn bằng nhựa mềm trong mờ, đường kính chừng 2mm. Khi đầu phun mang cartridge chạy trong máy, ống dẫn sẽ di chuyển theo. Lúc ống còn mới thì nó còn đàn hồi, không bị rũ xuống và vướng vào bên dưới đầu phun. Theo thời gian, ống giảm độ đàn hồi và sẽ thường bị vướng dưới đầu phun. Do đầu phun chạy rất nhanh nên tiếng ồn khi bị vướng nghe rất đáng sợ. Tôi có một máy Epson T11 bị như vậy.</p>
 <p>Một lần vào tiệm bán máy tính có trưng bày máy in phun dùng mực liên tục của chính Epson, tôi mở nắp máy lên xem Epson dẫn mực vào như thế nào. Các ống dẫn mực trong máy này không khác gì ở hệ thống mực liên tục thường gặp. Tuy nhiên, Epson có cách chống vướng ống mực dưới đầu phun bằng cách cho một dải nhựa kẹp theo các ống mực, dải nhựa này sẽ giúp tăng độ đàn hồi.
 <br>Áp dụng cách đó vào máy in T11 ở nhà, tôi cắt lấy một dải từ miếng bìa hồ sơ bằng nhựa và dán kèm vào các ống dẫn mực. Thế là hết vướng!</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
