--- a/kinh-nghiem/may-tinh/in-sach-nho.html
+++ b/kinh-nghiem/may-tinh/in-sach-nho.html
@@ -231,6 +231,10 @@ for (( i=$((j=0)); i&lt;$num_page; ((i+=16)) )) ; do
 <br>Theo script trên thì sách sẽ được đóng theo cách bấm đinh hoặc dán keo. Nếu muốn may sách thì phải quay các trang A7 và xếp thành từng <i>tay sách</i> với 4n tờ đôi lồng vào nhau.
 <br>Tôi đã dùng cách trên để in cuốn sách Dưới Chân Thầy, file pdf ở <a href="/download/">đây</a>, một cuốn sách nhỏ chỉ cách làm người tốt mà tôi đã được đọc từ năm 1974.
 <br>Trong các mailing list cũng đã có người bàn về việc này: dùng LaTex để sắp xếp các trang A7 trong trang A4.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 
