--- a/kinh-nghiem/may-tinh/oss.html
+++ b/kinh-nghiem/may-tinh/oss.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -354,6 +355,10 @@ data-ad-slot="3830899615">
 <p>Chương trình phát hiện virus có thể được dùng để làm nhiều việc: phát hiện virus gửi qua mail, phát hiện virus trong web server đi vào qua web proxy, phát hiện virus từ các máy Windows client gửi vào server.</p>
 <h3>Xem thêm</h3>
 <p><a href="https://linux-mag.com/id/7187" target="_blank">Một văn phòng luật sư ở Mỹ dùng toàn phần mềm mã nguồn mở</a></p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
