--- a/kinh-nghiem/may-tinh/phan-mem-tu-do.html
+++ b/kinh-nghiem/may-tinh/phan-mem-tu-do.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -560,6 +561,10 @@ LGPL là một trường hợp đặc biệt, LGPL cho phép tạo ra các phầ
 Một số phần mềm dùng trong các cơ quan nhà nước, hay các tổ chức đặc biệt như ngân hàng, cần được giữ bí mật về cấu trúc dữ liệu và giải thuật. Những phần mềm đó nên được thuê viết riêng cho cơ quan sử dụng, và vẫn có thể dùng những thành phần được bảo vệ dưới giấy phép LPGL.
 </p>
 <p>Bài này được đăng trên e-CHIP số Tháng Tám, 2007.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
