--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -151,6 +151,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -490,6 +491,8 @@ Tài-liệu tham-khảo:
 <br>* <a href="https://minepi.com/white-paper" target='_blank'>Pi Network White Paper</a>
 <br>* <a href="https://pinetwork.atlassian.net/servicedesk/customer/portal/1/article/33038" target='_blank'>Pi Network Community Wiki</a>
 <br>* <a href="https://www.reddit.com/r/PiNetwork/wiki/pi-wiki" target='_blank'>Reddit Pi Network</a>
+Các bài liên quan:
+<br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
 <br>Mọi ý-kiến thảo-luận xin ghi vào các trang: <a href="https://www.facebook.com/lamgiauchacchan/posts/1819584918207108" rel="nofollow" target="_blank">Facebook</a></div>
   <hr>
   <div class="footer">
