--- a/kinh-nghiem/may-tinh/privcloudstor.html
+++ b/kinh-nghiem/may-tinh/privcloudstor.html
@@ -660,6 +660,10 @@ Chi phí sử dụng cloud storage server này chỉ gồm tiền điện server
 
 <hr>
 Nếu không tìm được một máy laptop cũ để làm cloud storage server, bạn cũng có thể mua một máy tính nhỏ như <a href="raspberrypi">RaspberryPi</a>. RaspberryPi dùng SD card thay cho đĩa cứng chứa hệ điều hành, và bạn có thể gắn thêm đĩa cứng ngoài qua USB để chứa file.
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 <!-- AMP In-article 1 -->
