--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -467,6 +468,10 @@ data-ad-slot="3830899615">
 Có trường hợp nhân viên tính tiền ở cửa hàng cố nhớ hết thông tin trên hai mặt thẻ rồi sau đó ghi lại vào sổ tay, rồi dùng thông tin đó để mua hàng online ở những cửa hàng không kiểm soát chặt.
 
 <p>Ngoài tài khoản ngân hàng, tôi còn có <a href="vi-dien-tu">ví tiền điện tử</a>, tài khoản đầu tư <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 <!-- AMP In-article 1 -->
 <amp-ad
