--- a/kinh-nghiem/may-tinh/raspberrypi.html
+++ b/kinh-nghiem/may-tinh/raspberrypi.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -315,7 +316,10 @@ data-ad-slot="3830899615">
 <p>Hai dây USB được hàn theo dạng chữ Y để vừa nối thiết bị USB vào Raspberry Pi vừa cấp điện 5V cho Raspberry Pi. Một dây nối thường trực đến ổ đĩa cứng 120GB và nguồn 5V từ adapter DTech (phía bên phải trong hình), dây thứ hai lấy nguồn 5V từ charger (cắm trên ổ cắm Lioa ở giữa hình) và sẵn sàng để cắm một ổ đĩa cứng chứa phim.</p>
 <p>Trước khi quyết định dùng USB ⇔ SATA/PATA bridge DTech 8003A, tôi đã thử dock cho 2 ổ đĩa cứng SATA <a href="https://www.unitek-products.com/en/product_detail.php?id=58" rel="nofollow" target="_blank">Unitek Y-2041</a>, trông nó gọn đẹp hơn DTech nhưng nó có một lỗi nặng là khi tháo hay gắn một ổ đĩa cứng thì ổ đĩa cứng đang làm việc ở ngăn kia bị reset.</p>
 
-<div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://www.facebook.com/boi.hong.le/posts/602325189780868" rel="nofollow" target="_blank">Facebook</a></div>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://www.facebook.com/boi.hong.le/posts/602325189780868" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
   <div class="footer">
