--- a/kinh-nghiem/may-tinh/roaming.html
+++ b/kinh-nghiem/may-tinh/roaming.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -357,6 +358,10 @@ Tuy nhiên, có nhiều trường hợp chúng ta không thể nối dây Ethern
 <br>Các Wi-Fi AP đời cũ nối với nhau qua sóng Wi-Fi theo cách WDS (Wireless Distribution System): sóng Wi-Fi từ một AP chính được các AP phụ nối dài thêm.
 <br>Các Wi-Fi AP đời mới nối với nhau qua sóng Wi-Fi theo cách mesh: các AP ở gần nhau tự động thiết lập mạng lưới truyền thông tin với nhau để thông tin được truyền ra Internet.
 </p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
