--- a/kinh-nghiem/may-tinh/spam.html
+++ b/kinh-nghiem/may-tinh/spam.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -361,6 +362,10 @@ b) Gửi thư điện tử hoặc tin nhắn quảng cáo từ hệ thống có 
 c) Gửi thư điện tử quảng cáo hoặc tin nhắn quảng cáo không có nhãn. <br />
 Xem thêm ở https://antispam.vncert.gov.vn</blockquote>
 <p>Đồng thời forward nguyên vẹn thư rác đến canhbaothurac@gmail.com để VNCert có bằng chứng về việc gửi thư rác.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
