--- a/kinh-nghiem/may-tinh/tai-khoan-google.html
+++ b/kinh-nghiem/may-tinh/tai-khoan-google.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -303,6 +304,10 @@ data-ad-slot="3830899615">
 <p>Gõ Yahoo ID và password của Yahoo account đó, bấm <b>Sign in</b>, sẽ thấy tương tự hình 7. Bấm Agree để bắt đầu dùng tài khoản Google.</p>
 <div><amp-img alt="Hình 7" src="/images/Google07.png" width="502" height="704" layout="responsive"></amp-img></div>
 <p>Bất cứ khi nào dùng các dịch vụ của Google, bạn hãy nhìn lên góc trên bên phải của browser xem có thấy địa chỉ email hay là chữ <b>Sign in / Đăng nhập</b>. Hãy bấm vào <b>Sign in / Đăng nhập</b> để dùng được mọi dịch vụ.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 <!-- AMP In-article 1 -->
