--- a/kinh-nghiem/may-tinh/toys.html
+++ b/kinh-nghiem/may-tinh/toys.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -388,6 +389,10 @@ Tôi đang chuyển hết các hoạt động trong mạng gia đình sang IPv6:
 <p>Trong máy desktop có gắn card TV Bt878. Tôi thử dùng <a href="https://sector17.tvand.net/cabletv/" target="_blank">CableTV</a> và <a href="https://cube.dyndns.org/~rsnel/cc2y4m/" target="_blank">cc2y4m</a> để xem HTVC nhưng không được.</p>
 <p>Đây là hình chụp những thứ kể trên. Ở giữa trên cao là máy nhạc Kenwood màu đen, âm thanh của máy tính phát qua máy này. Phía trên bên phải là máy in và scan <a href="../linh-tinh/anh">Epson CX1500</a>. Máy server nằm ở ngăn dưới và quay ngang ra (để dễ cắm dây). Máy desktop nằm bên phải, cũng quay ngang ra. Hai màn hình cùng gắn vào máy desktop, màn hình bên trái đang hiện Windows XP trong VMware, màn hình bên phải là X Window được quay 90° để hợp với khổ giấy dọc, rất tiện khi đọc web hay soạn tài liệu. MS Windows đâu dễ gì làm được như vậy!</p>
 <div><amp-img alt="Máy tính 2 đầu" src="/images/computers0707.jpg" width="640" height="480" layout="responsive" /></div>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 <!-- AMP In-article 1 -->
