--- a/y-kien/do-giau.html
+++ b/y-kien/do-giau.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -282,6 +283,7 @@ Các bài liên quan:
 <br>* <a href="/huu-ich/chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
 <br>* <a href="/huu-ich/ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
 <br>* <a href="/huu-ich/cac-loai-bao-hiem/">Bảo vệ tài sản trước những bất trắc</a>
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133515857462669312" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375546082611006" rel="nofollow" target="_blank">Facebook</a></div>
 
 
