--- a/y-kien/dung-hang-viet-nam.html
+++ b/y-kien/dung-hang-viet-nam.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -297,6 +298,8 @@ Vậy để làm gì để tránh những kiểu không biết trên?
 <div class="todiscuss">
 Các bài liên quan:
 <br>* <a href="/huu-ich/de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
 
 <!-- AMP In-article 1 -->
