--- a/y-kien/gia-tra.html
+++ b/y-kien/gia-tra.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -229,6 +230,10 @@ data-ad-slot="5275186684">
 <p>Thời này muốn kiếm mua những thực phẩm tự nhiên và an toàn vệ sinh hơi khó. Làm sao tìm được những thứ mứt chỉ làm từ trái cây và đường, những thứ kem có trái cây xay nhuyễn thay vì hương trái cây, những gói mì ăn liền không bột ngọt. Những sản phẩm thật sự tự nhiên thường được làm ra từ những cơ sở nhỏ, không đủ điều kiện để bảo quản lâu, không đủ vệ sinh.</p>
 <p>Tôi còn nhớ những năm 1980, nhà tôi có làm kem xốp (giống như kem hộp của Vinamilk bây giờ) bằng máy làm kem gia đình của Mỹ để bán. Kem được làm bằng cách nấu sữa bột, bột mì (để tạo độ dẻo), trái cây xay nhuyễn, sau đó cho vào thùng hình trụ tròn, thùng được quay và khuấy liên tục trong khi ngâm trong hỗn hợp nước đá và muối hột, quay bằng tay liên tục khoảng 40 phút thì thành kem xốp và mềm. Kem được làm hoàn toàn từ các thành phần tự nhiên, không có màu và hương tổng hợp.
 <br>Hoá ra là những tiến bộ trong công nghiệp thực phẩm không giúp cho những sản phẩm tự nhiên tốt hơn mà lại giúp cho nhà sản xuất làm ra những sản phẩm giống với tự nhiên. Những sản phẩm giả tự nhiên đó vẫn được sản xuất, vẫn được tiêu thụ, nhà sản xuất quá dễ dãi đối với sản phẩm của mình còn người người tiêu dùng thì quá dễ dãi khi ăn uống. Và không biết việc ăn uống những đồ giả đó có làm con người dễ dàng cư xử giả dối với nhau không?</p>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
 
 <!-- AMP In-article 1 -->
