--- a/y-kien/khac-nguoi.html
+++ b/y-kien/khac-nguoi.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -191,6 +192,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Thật đáng buồn là mặc dù số người thuộc loại thứ ba ít hơn số người thuộc loại thứ nhất nhưng lại <b>rất nhiều</b> hơn số người thuộc loại thứ hai.
 <br>Và ở nơi nào mà số người thuộc loại thứ ba này tụ lại đủ lớn thì có khả năng lôi kéo thêm những người thuộc loại thứ nhất làm theo (vì họ thường làm theo đám đông mà). Rồi trong số người loại thứ ba đó sẽ có những người hào hứng nghĩ ra việc gì xấu hơn nữa để làm. Khi đó thảm hoạ bắt đầu, xã hội rối ren! Tình huống này rất thường gặp.</p>
 <div class="right">Dời từ Yahoo blog về đây.</div>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
 
 
