--- a/y-kien/muc-hay-den.html
+++ b/y-kien/muc-hay-den.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -201,6 +202,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Như vậy điều quan trọng không phải là gần cái gì mà là khả năng phân biệt được mọi thứ. Mỗi người phải dùng chính trí tuệ của mình để phân biệt chứ không được nhờ ai khác phân biệt giùm. Không thể nghe một người đáng kính nào đó nói "đây là đèn" khi đưa ra một thứ bằng thuỷ tinh, rồi cứ thế đem về để trong nhà và nghĩ rằng nhà mình sáng hơn trăng, có ngờ đâu thứ bằng thuỷ tinh đó là lọ mực 😞</p>
 <p>Một điều cần phải phân biệt nữa là có một chỗ gần cái đèn nhưng không sáng, đó là chỗ gần cái chuôi đèn (hay đui đèn). Thấy một bóng đèn đang đưa chuôi của nó về phía mình thì đừng cố tiến lại gần nó, hãy tìm bóng đèn khác đang rọi đến chỗ mình. Nói cụ thể hơn là: mọi điều đều cần có điều kiện để áp dụng mới đúng được, nếu không có đủ điều kiện thì điều đó có thể trở thành sai.</p>
 <p>Khả năng phân biệt là một thứ cần thiết để con người tự hoàn thiện, còn những thứ khác nữa được giải thích trong <a href="/download/D%C6%B0%E1%BB%9BiCh%C3%A2nTh%E1%BA%A7y.pdf" target='_blank'>cuốn sách nhỏ này</a>. Phải thực hành phân biệt thật sớm, trước khi bị dính mực. Bị dính mực rồi thì nhìn mọi thứ đều lem nhem như nhau, khó phân biệt hơn.</p>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
   <hr>
   <div class="footer">
