--- a/y-kien/nhung-cai-nem.html
+++ b/y-kien/nhung-cai-nem.html
@@ -120,9 +120,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 }
 
 </style>
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 </head>
 
 <body>
+<amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
   <!-- top of body -->
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
@@ -193,6 +195,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Người ta phải dựng các dải phân cách giữa đường để ngăn sự tạo thành cái nêm, nhưng những kẻ chống phá xã hội (antisocial) vẫn cố đi sang bên trái dải phân cách. Thật nguy hiểm!</p>
 <p>Phải gọi những kẻ đó là chống phá xã hội vì bọn chúng biết là đi sang trái là sai nhưng vẫn cố làm.</p>
 <div class="right">Dời từ Yahoo blog về đây.</div>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
 
 
