--- a/y-kien/thanh-ngu-ve-tien.html
+++ b/y-kien/thanh-ngu-ve-tien.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -268,6 +269,10 @@ Xã hội ngày nay đã thay đổi nhiều so với thời xưa. Đất chật
 Khi bạn sống trong một căn nhà thì bạn luôn luôn phải tốn tiền dù cho đó là nhà của bạn. Nếu đó là nhà của bạn thì bạn đã tốn chi phí cơ hội, nghĩa là nếu đem cho thuê căn nhà đó được n triệu đồng mỗi tháng mà bạn ở trong đó thì mỗi tháng bạn đã kiếm được và tiêu hết ngay n triệu đồng đó; trong trường hợp này nếu bạn có thể thuê một căn khác sống tốt với n-i triệu đồng thì bạn đã có thêm i triệu đồng tiền mặt.</p>
 <h2>Tham thì thâm</h2>
 <p>Khi tham quá thì đầu óc kém tỉnh táo, dẫn đến những liều lĩnh, sai lầm làm thua lỗ, thâm vào vốn. Trong xã hội Việt Nam hiện đại, người ta nghe nhiều về những trường hợp thua lỗ trên sàn chứng khoán. Đó là ví dụ rõ ràng nhất của tham thì thâm. Tôi đã <a href="/huu-ich/de-tien-vao-dau">tham gia thị trường chứng khoán</a> từ năm 2002, nhưng tôi không tham nên không bị thâm.</p>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
 
 <!-- AMP In-article 1 -->
