--- a/y-kien/tien-va-mau.html
+++ b/y-kien/tien-va-mau.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -193,7 +194,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Mỗi lần rút ra một ít máu, từ từ sẽ được một lượng lớn, lớn gấp nhiều lần lượng máu trong cơ thể. Cũng như mỗi ngày để dành một ít tiền sẽ có một số tiền lớn gấp nhiều lần lương tháng.
 
 <br>Điểm khác nhau giữa tiền và máu: khi lấy tiền ra khỏi túi để gửi đi <a href="/huu-ich/de-tien-vao-dau">đầu tư một cách an toàn</a>, bạn chắc chắn sẽ nhận lại được cả gốc và lãi, nếu không cần dùng thì cũng có thể để cho người thân dùng.</p>
-<div class="todiscuss">Mọi ý kiến bình luận xin ghi vào trang <a href="https://www.facebook.com/lamgiauchacchan/posts/375956719236609" rel="nofollow" target="_blank">Facebook</a> hoặc <a href="https://twitter.com/GiauCham/status/1133515375641890817" target="_blank">Twitter</a>.</div>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+<br>Mọi ý kiến bình luận xin ghi vào trang <a href="https://www.facebook.com/lamgiauchacchan/posts/375956719236609" rel="nofollow" target="_blank">Facebook</a> hoặc <a href="https://twitter.com/GiauCham/status/1133515375641890817" target="_blank">Twitter</a>.</div>
 
 
 
