--- a/y-kien/xa-hoi-thong-tin.html
+++ b/y-kien/xa-hoi-thong-tin.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -344,6 +345,10 @@ data-ad-slot="3830899615">
 <p>Những thiết bị thông tin di động sẽ có ích cho nhân viên thi hành nhiệm vụ ngoài đường, ví dụ như cảnh sát giao thông có thể dùng máy điện thoại di động qua dịch vụ dữ liệu không dây tra thông tin về bằng lái, bảng số xe của người vi phạm luật, không sợ nạn bằng giả, bảng số giả nữa; nhân viên y tế cấp cứu cũng có thể xem hồ sơ sức khoẻ nạn nhân bằng máy tính xách tay qua dịch vụ dữ liệu không dây.</p>
 <p>Một hệ thống thông tin toàn quốc như vậy sẽ đem lại lợi ích to lớn cho toàn xã hội, tiết kiệm rất nhiều thời gian và tiền bạc cho mọi người. Thử tưởng tượng người cần xin việc chỉ cần đến khám sức khoẻ tại bệnh viện, trả phí xong là hồ sơ sức khoẻ đã được cập nhật, sau đó đến kiosqe thông tin gửi hồ sơ sức khoẻ mới nhất cùng với các thông tin có sẵn khác đến nhiều nhà tuyển dụng, không phải đi sao chụp và công chứng đủ thứ giấy, chi phí dùng kiosque còn rẻ hơn tiền mua phong bì hồ sơ nữa.</p>
 <p>Để sử dụng một hệ thống thông tin to lớn như vậy một cách an toàn thì phải có nhiều biện pháp bảo mật thông tin, nhất là hệ thống lưu trữ chữ ký số. Một số biện pháp an ninh sau đây cần phải áp dụng để bảo vệ hệ thống lưu trữ chữ ký số: máy tính phải được đặt trong phòng chống bom, chống mọi sự đột nhập kể cả cách đào hầm từ lòng đất, chỉ những người có trách nhiệm mới được vào phòng và mỗi lần vào đều phải có giấy phép của giám đốc, phải có người làm chứng và phải ghi nhật ký công việc, không được đem thiết lưu trữ loại tháo được (thẻ nhớ, băng từ…) vào phòng, những thiết bị lưu trữ đã hết hạn sử dụng phải được xoá hết dữ liệu trước khi đem ra ngoài, hệ thống được sao lưu và kiểm tra định kỳ để kịp thời phát hiện mọi sự xâm nhập.</p>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
   <hr>
   <div class="footer">
