--- a/huu-ich/cau-chuyen/bot-lo-ve-tien.html
+++ b/huu-ich/cau-chuyen/bot-lo-ve-tien.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -315,6 +316,7 @@ data-ad-slot="3830899615">
   Các bài liên quan:
   <br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
   <br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   </div>
 
   <hr>
