--- a/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
+++ b/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
@@ -354,6 +354,7 @@ Nhiều người vẫn nghĩ rằng giá cái nhà sẽ tăng. Tôi tin là giá
   Các bài liên quan:
   <br>* <a href="../dung-so-dau-tu">Đừng sợ đầu tư</a>
   <br>* <a href="nhung-quyet-dinh-tot-cho-tuoi-gia">Những quyết định tốt cho tuổi già</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132811370905210880" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/486673791498234" rel="nofollow" target="_blank">Facebook</a></div>
 
 
