--- a/huu-ich/cau-chuyen/nhung-hon-da.html
+++ b/huu-ich/cau-chuyen/nhung-hon-da.html
@@ -287,6 +287,7 @@ data-ad-slot="3830899615">
   Các bài liên quan:
   <br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
   <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132810816074309632" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376824252483189" rel="nofollow" target="_blank">Facebook</a></div>
 
 
