--- a/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
+++ b/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -339,6 +340,7 @@ data-ad-slot="3830899615">
   <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
   <br>* <a href="../cac-loai-bao-hiem/">Bảo vệ tài sản trước những bất trắc</a>
   <br>* <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Bảo hiểm nhân thọ liên kết quỹ đầu tư</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132813023192608768" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376826242482990" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
