--- a/huu-ich/cau-chuyen/tranh-mang-no.html
+++ b/huu-ich/cau-chuyen/tranh-mang-no.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -348,6 +349,7 @@ data-ad-slot="3830899615">
   <br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
   <br>* <a href="/y-kien/su-giau-co">Các nguồn gốc của sự giàu có</a>
   <br>* <a href="dung-the-tin-dung-khon-ngoan">Dùng thẻ tín dụng một cách không ngoan</a>
+  <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132813374994112513" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/430207660478181" rel="nofollow" target="_blank">Facebook</a></div>
 
 
