--- a/kinh-nghiem/may-tinh/cashflow.html
+++ b/kinh-nghiem/may-tinh/cashflow.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -297,6 +298,7 @@ Các bài liên quan:
 <br>* <a href="/y-kien/thanh-ngu-ve-tien">Các thành ngữ về tiền</a>
 <br>* <a href="/huu-ich/tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
 <br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
 </div>
 
 <!-- AMP In-article 1 -->
