--- a/kinh-nghiem/may-tinh/nhiet-do.html
+++ b/kinh-nghiem/may-tinh/nhiet-do.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -193,6 +194,10 @@ Cho chạy chương trình video encode, sau 8 phút, máy: 36℃, CPU: 63,6℃,
 Ngừng chương trình video encode, sau 1 phút, nhiệt độ trở về tình trạng ban đầu.<br />
 Quạt CPU đang dùng là loại bán kèm với CPU Intel. Quạt này có sensor đo nhiệt độ không khí để tự thay đổi tốc độ.<br />
 Có loại quạt đắt tiền hơn thì có thể thay đổi tốc độ qua PWM (Pulse Width Modulation) từ motherboard, thậm chí có thể cho quạt ngừng hẳn nếu thấy CPU đủ nguội.</p>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 
