--- a/kinh-nghiem/may-tinh/pin-lithium-ion.html
+++ b/kinh-nghiem/may-tinh/pin-lithium-ion.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -372,6 +373,10 @@ data-ad-slot="3830899615">
 <li>Cường độ dòng điện (current): dòng điện chảy vào hay chảy ra khỏi pin, thể hiện bằng số mA hoặc A</li>
 <li>Công suất (rate, power, wattage): bằng (5) nhân với (6)</li>
 </ol>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
   <hr>
   <div class="footer">
