--- a/kinh-nghiem/may-tinh/tien-ich-di-dong.html
+++ b/kinh-nghiem/may-tinh/tien-ich-di-dong.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -355,6 +356,10 @@ Có thể ghi luôn dãy số có ký hiệu ngừng trong phone book. Ký hiệ
 </ul>
 </li>
 </ol>
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  </div>
 
 
 <!-- AMP In-article 1 -->
