--- a/y-kien/da-len-bao.html
+++ b/y-kien/da-len-bao.html
@@ -257,6 +257,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </tbody>
 </table>
 </div>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
 
   <hr>
   <div class="footer">
